<resources>
    <string name="app_name">Cupang Laundry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cupang Laundry</string>
    <string name="nav_header_subtitle">~Cuci Pakaian Gampang~</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="lbl_jml_pakaian">Jumlah Pakaian</string>
    <string name="lbl_berat">Berat Total</string>
    <string name="lbl_layanan">Jenis Layanan</string>
    <string name="lbl_style">:</string>

    <string name="cancel">BATAL</string>
    <string name="add">TAMBAH</string>
    <string name="save">SIMPAN</string>
    <string name="delete">DELETE</string>

    <!--USER-->
    <string name="namaUser">Nama Lengkap</string>
    <string name="alamatUser">Alamat Lengkap</string>
...
